add word functionality - not finished - to resolve new category creation

--- a/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/mainPage.html
+++ b/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/mainPage.html
@@ -21,6 +21,9 @@
      <vaadin-button style-name="small" width="255px" plain-text _id="btnAddRule" :center>
        Add gram rule 
      </vaadin-button>
+     <vaadin-button style-name="small" width="255px" plain-text _id="btnShowDict" :center>
+       Show dictionary 
+     </vaadin-button>
      <vaadin-button style-name="small" width="255px" plain-text _id="btnExam" :center>
        Launch exam 
      </vaadin-button>
