--- a/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/addWord.html
+++ b/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/addWord.html
@@ -10,15 +10,11 @@
    <vaadin-panel caption="AddWord" size-full _id="pnlAddWord" :expand>
     <vaadin-vertical-layout height="512px">
      <vaadin-form-layout>
-      <vaadin-text-field caption="word:" style-name="small" width-full tabindex="1" _id="txtWord"></vaadin-text-field>
-      <vaadin-text-field caption="equiv:" style-name="small" width-full tabindex="2" _id="txtEquiv"></vaadin-text-field>
+      <vaadin-text-field required-indicator-visible caption="word:" style-name="small" width-full tabindex="1" _id="txtWord"></vaadin-text-field>
+      <vaadin-text-field required-indicator-visible caption="equiv:" style-name="small" width-full tabindex="2" _id="txtEquiv"></vaadin-text-field>
       <vaadin-text-field caption="defn:" style-name="small" width-full tabindex="3" _id="txtDefn"></vaadin-text-field>
       <vaadin-text-field caption="exampl:" style-name="small" width-full tabindex="4" _id="txtExmpl"></vaadin-text-field>
-      <vaadin-combo-box caption="category:" style-name="small" width-full tabindex="5" data-item-type="java.lang.String" _id="cmbCategory">
-       <option item="Option1">Option 1</option>
-       <option item="Option2">Option 2</option>
-       <option item="Option3">Option 3</option>
-      </vaadin-combo-box>
+      <vaadin-combo-box scroll-to-selected-item caption="category:" style-name="small" width-full tabindex="5" data-item-type="java.lang.String" _id="cmbCategory"></vaadin-combo-box>
       <vaadin-horizontal-layout>
        <vaadin-button icon="fonticon://Vaadin-Icons/e762" style-name="friendly small" width="128px" tabindex="6" plain-text _id="btnSend">
          send 
@@ -27,6 +23,7 @@
          reset 
        </vaadin-button>
       </vaadin-horizontal-layout>
+      <vaadin-vertical-layout height="164px" _id="tabDetails"></vaadin-vertical-layout>
      </vaadin-form-layout>
     </vaadin-vertical-layout>
    </vaadin-panel>
