add word functionality - finished and show Dictionary without details

--- a/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/addWord.html
+++ b/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/addWord.html
@@ -14,7 +14,7 @@
       <vaadin-text-field required-indicator-visible caption="equiv:" style-name="small" width-full tabindex="2" _id="txtEquiv"></vaadin-text-field>
       <vaadin-text-field caption="defn:" style-name="small" width-full tabindex="3" _id="txtDefn"></vaadin-text-field>
       <vaadin-text-field caption="exampl:" style-name="small" width-full tabindex="4" _id="txtExmpl"></vaadin-text-field>
-      <vaadin-combo-box scroll-to-selected-item caption="category:" style-name="small" width-full tabindex="5" data-item-type="java.lang.String" _id="cmbCategory"></vaadin-combo-box>
+      <vaadin-combo-box scroll-to-selected-item caption="category:" style-name="small" width-full tabindex="5" data-item-type="com.tw.progs.HandyEnglish.db.myBatis.dtos.Category" _id="cmbCategory"></vaadin-combo-box>
       <vaadin-horizontal-layout>
        <vaadin-button icon="fonticon://Vaadin-Icons/e762" style-name="friendly small" width="128px" tabindex="6" plain-text _id="btnSend">
          send 
