--- a/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/selectExamine.html
+++ b/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/selectExamine.html
@@ -6,6 +6,8 @@
   <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-vertical-layout size-full></vaadin-vertical-layout>
+  <vaadin-vertical-layout size-full>
+   <vaadin-tab-sheet caption="Select and preapre exam" style-name="centered-tabs equal-width-tabs padded-tabbar" size-full _id="tabExams" :expand></vaadin-tab-sheet>
+  </vaadin-vertical-layout>
  </body>
 </html>
