--- a/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/mainPage.html
+++ b/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/mainPage.html
@@ -7,30 +7,39 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-panel caption="Time to choose:" height="320px" _id="pnlChoose" :expand>
-    <vaadin-vertical-layout size-full>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnAddWord" :center>
-       Add word 
-     </vaadin-button>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnAddPhrase" :center>
-       Add phrase 
-     </vaadin-button>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnAddTest" :center>
-       Add test 
-     </vaadin-button>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnAddRule" :center>
-       Add gram rule 
-     </vaadin-button>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnShowDict" :center>
-       Show dictionary 
-     </vaadin-button>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnExam" :center>
-       Launch exam 
-     </vaadin-button>
-     <vaadin-button style-name="small" width="255px" plain-text _id="btnMultiExam" :center>
-       Launch multiplayer exam 
-     </vaadin-button>
-     <vaadin-button style-name="small danger" width="192px" plain-text _id="btnLogout" :center>
+   <vaadin-panel caption="Time to choose:" size-full _id="pnlChoose" :expand>
+    <vaadin-vertical-layout margin="false">
+     <vaadin-horizontal-layout spacing="false" width-full>
+      <vaadin-vertical-layout size-auto>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnAddWord">
+         Add word 
+       </vaadin-button>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnAddPhrase">
+         Add phrase 
+       </vaadin-button>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnAddTest">
+         Add test 
+       </vaadin-button>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnAddRule">
+         Add gramatical rule 
+       </vaadin-button>
+      </vaadin-vertical-layout>
+      <vaadin-vertical-layout size-auto>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnShowDict">
+         Show dictionary 
+       </vaadin-button>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnShowRules">
+         Show gramatic notes 
+       </vaadin-button>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnExam">
+         Launch exam 
+       </vaadin-button>
+       <vaadin-button style-name="small" width="255px" plain-text _id="btnMultiExam">
+         Launch multiplayer exam 
+       </vaadin-button>
+      </vaadin-vertical-layout>
+     </vaadin-horizontal-layout>
+     <vaadin-button style-name="small danger" width="192px" plain-text _id="btnLogout" :middle :center>
        Logout 
      </vaadin-button>
     </vaadin-vertical-layout>
