--- a/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/mainPage.html
+++ b/code/HandyEnglish/src/main/resources/com/tw/progs/HandyEnglish/views/gui/mainPage.html
@@ -14,14 +14,14 @@
        <vaadin-button style-name="small" width="255px" plain-text _id="btnAddWord">
          Add word 
        </vaadin-button>
-       <vaadin-button style-name="small" width="255px" plain-text _id="btnAddPhrase">
+       <vaadin-button enabled="false" style-name="small" width="255px" plain-text _id="btnAddPhrase">
          Add phrase 
        </vaadin-button>
-       <vaadin-button style-name="small" width="255px" plain-text _id="btnAddTest">
+       <vaadin-button enabled="false" style-name="small" width="255px" plain-text _id="btnAddTest">
          Add test 
        </vaadin-button>
        <vaadin-button style-name="small" width="255px" plain-text _id="btnAddRule">
-         Add gramatical rule 
+         Add grama note 
        </vaadin-button>
       </vaadin-vertical-layout>
       <vaadin-vertical-layout size-auto>
@@ -29,12 +29,12 @@
          Show dictionary 
        </vaadin-button>
        <vaadin-button style-name="small" width="255px" plain-text _id="btnShowRules">
-         Show gramatic notes 
+         Show grama notes 
        </vaadin-button>
        <vaadin-button style-name="small" width="255px" plain-text _id="btnExam">
          Launch exam 
        </vaadin-button>
-       <vaadin-button style-name="small" width="255px" plain-text _id="btnMultiExam">
+       <vaadin-button enabled="false" style-name="small" width="255px" plain-text _id="btnMultiExam">
          Launch multiplayer exam 
        </vaadin-button>
       </vaadin-vertical-layout>
